[package]
name = "aegisd"
version = "0.1.0"
edition = "2021"
authors = ["Split2ops Software"]

[[bin]]
name = "aegisd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
cyberwall-core = { path = "../cyberwall-core" }
cyberwall-backend-windows = { path = "../cyberwall-backend-windows" }
