[package]
name = "cyberdefender"
version = "0.1.0"
edition = "2021"
authors = ["Split2ops Software"]

[[bin]]
name = "cyberdefender"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
s2o_net_lib = { path = "../../../s2o.s2o_net_lib" }
