[package]
name = "cyberintel"
version = "0.1.0"
edition = "2021"
authors = ["Split2ops Software"]

[[bin]]
name = "cyberintel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
