[package]
name = "cyberwall-cli"
version = "0.1.0"
edition = "2021"
authors = ["Split2ops Software"]

[[bin]]
name = "cyberwall"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
cyberwall-core = { path = "../cyberwall-core" }
cyberwall-backend-windows = { path = "../cyberwall-backend-windows" }
colored = "2.0"
serde_json = "1.0"
